--- a/src/main/java/uiDecoreted/Maintenance/ViewmtRequestPanel.form
+++ b/src/main/java/uiDecoreted/Maintenance/ViewmtRequestPanel.form
@@ -172,12 +172,12 @@
     <Component class="javax.swing.JLabel" name="bkn">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/images/housework/main@0,3x.png"/>
+          <Image iconType="3" name="/images/maintenance/maintanx.png"/>
         </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="-20" y="40" width="520" height="800"/>
+          <AbsoluteConstraints x="-30" y="40" width="520" height="800"/>
         </Constraint>
       </Constraints>
     </Component>
